# osgearth-buildings

./: CMakeLists.txt  LICENSE  README.md
CMakeModules/: FindOSG.cmake  FindOsgEarth.cmake  OsgEarthMacroUtils.cmake
data/: buildings-procedural-only.xml  buildings.xml  one.dbf  one.prj  one.shp  one.shx  test.dbf  test.prj  test.shp  test.shx
data/catalog/: catalog.xml  catalog_fr.xml  catalog_jp.xml
data/catalog/models/: ac.osgb  cow.osgt  house.ive  roof1.osgb  roof10.osgb  roof11.osgb  roof12.osgb  roof13.osgb  roof14.osgb  roof15.osgb  roof16.osgb  roof2.osgb  roof3.osgb  roof4.osgb  roof5.osgb  roof6.osgb  roof7.osgb  roof8.osgb  roof9.osgb
src/: CMakeLists.txt
src/applications/: CMakeLists.txt
src/applications/test/: CMakeLists.txt  osgearth_aerodrome.cpp
src/osgEarthBuildings/: Analyzer.cpp  BuildContext  Building  Building.cpp  BuildingCatalog  BuildingCatalog.cpp  BuildingCompiler  BuildingCompiler.cpp  BuildingExtension  BuildingExtension.cpp  BuildingFactory  BuildingFactory.cpp  BuildingLayer  BuildingLayer.cpp  BuildingLayerOptions  BuildingOptions  BuildingPager  BuildingPager.cpp  BuildingSymbol  BuildingSymbol.cpp  CMakeLists.txt  CompilerOutput  CompilerOutput.cpp  CompilerSettings  CompilerSettings.cpp  CustomRoofCompiler  CustomRoofCompiler.cpp  Elevation  Elevation.cpp  ElevationCompiler  ElevationCompiler.cpp  FeaturePlugin.cpp  FlatRoofCompiler  FlatRoofCompiler.cpp  Footprint  Footprint.cpp  GableRoofCompiler  GableRoofCompiler.cpp  InstancedBuildingCompiler.cpp  InstancedRoofCompiler  (+7 more)
tests/: boston.earth  buildings.earth  osm-filter.earth  osm.earth  viewpoints.xml
